--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 <!-- Photo frame -->
 <div class="photo-frame">
 <div class="frame-border">
-<img src="pic.png" alt="ჩვენი განსაკუთრებული მომენტები" class="couple-photo">
+    <img src="pic.png" alt="ჩვენი განსაკუთრებული მომენტები" class="couple-photo photo-1">
+    <img src="pic2.png" alt="ჩვენი განსაკუთრებული მომენტები" class="couple-photo photo-2">
 </div>
 <div class="photo-glow" aria-hidden="true"></div>
 </div>
